# advent2020

./: README.rst
cxx/: .clang-format  10a.cpp  10b.cpp  11a.cpp  11b.cpp  12a.cpp  12b.cpp  13a.cpp  13b.cpp  14a.cpp  14b.cpp  15a.cpp  15b.cpp  16a.cpp  16b.cpp  17a.cpp  17b.cpp  18a.cpp  1a.cpp  1b.cpp  21a.cpp  2a.cpp  2b.cpp  3a.cpp  3b.cpp  4a.cpp  4b.cpp  5a.cpp  5b.cpp  6a.cpp  6b.cpp  7a.cpp  7b.cpp  8a.cpp  8b.cpp  9a.cpp  9b.cpp  CMakeLists.txt  accounting.cpp  baggage.cpp  (+5 more)
cxx/include/aoc/: accounting.hpp  baggage.hpp  computer.hpp  math.hpp  pass.hpp  seatmap.hpp  train.hpp
cxx/test/: CMakeLists.txt  accounting_test.cpp  baggage_test.cpp  lrmath_test.cpp  pass_test.cpp  train_test.cpp
input/: 13b  14b  15b
